YDAL-98 added rest streaming channel and all related